--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL='mongodb://root:root@mongo_db:27017songDB'
+# DATABASE_URL='mongodb://root:root@mongo_db:27017songDB'
+DATABASE_URL='mongodb+srv://nahomdebele002:nahomdebele002@adismusic.avw9ryc.mongodb.net/adismusic'
+PORT=3000
